progress on fixing solving eqil seed rain

--- a/remake.yml
+++ b/remake.yml
@@ -144,6 +144,20 @@ targets:
     command: compare_strategy_lcp()
     plot: square
 
+  matrix_lcp_narea_vpd:
+    command: compare_strategy_lcp_narea_vpd()
+
+  matrix_growth_narea_vpd:
+    command: compare_strategy_growth_narea_vpd()
+
+  figures/plot_lcp_narea_vpd.pdf:
+    command: plot_strategy_lcp_narea_vpd(matrix_lcp_narea_vpd)
+    plot: square
+
+  figures/plot_growth_narea_vpd.pdf:
+    command: plot_strategy_growth_narea_vpd(matrix_growth_narea_vpd)
+    plot: square
+
   figures/FvC_FF16_FF16FvCB_LCP_Narea.pdf:
     command: compare_strategy_lcp_narea()
     plot: square
@@ -152,6 +166,17 @@ targets:
     command: compare_strategy_patch()
     plot: square
 
+  figures/FvC_FF16_FF16FvCB_Patch1.pdf:
+    command: compare_strategy_patch(I(v_narea = c(1e-3, 1e-3, 1e-3)))
+    plot: square
+
+  figures/FvC_FF16_FF16FvCB_Patch2.pdf:
+    command: compare_strategy_patch(I(v_narea = c(5e-3, 5e-3, 5e-3)))
+    plot: square
+
+  figures/FvC_FF16_FF16FvCB_Patch3.pdf:
+    command: compare_strategy_patch(I(v_narea = c(9e-3, 9e-3, 9e-3)))
+    plot: square
 
 # Parametrization of FvCB
 
@@ -344,7 +369,6 @@ targets:
     command: run_assembly_FvCB_narea_lma(disturbance_mean_interval = 5)
     check: exists
     cleanup_level: purge
-
 
 # Data sources and figures for traits patterns  ###################################################
 
