--- a/remake.yml
+++ b/remake.yml
@@ -77,7 +77,6 @@ targets:
     - figures/data_lma_ll_trade_off.pdf
     - figures/data_lma_ll_trade_off_climate_elev_T_P.pdf
     - figures/data_lma_ll_trade_off_climate_elev_P.pdf
-    - figures/data_lma_ll_trade_off_climate_elev_T.pdf
     - figures/data_lma_ll_trade_off_climate_slope_elev.pdf
     - figures/data_B_kl_climate.pdf
     - figures/fitness_lma_single.pdf
@@ -364,22 +363,22 @@ targets:
     cleanup_level: purge
 
   list_assembly_lma_single_elev:
-    command: run_assembly_list(I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ), I(FUN = run_assembly_elev), disturbance_mean_interval = 5, data_param = param_slope_P)
+    command: run_assembly_list(I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ), I(FUN = run_assembly_elev), disturbance_mean_interval = 5)
     check: exists
     cleanup_level: purge
 
   list_assembly_lma_multi_elev:
-    command: run_assembly_list(I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ), I(FUN = run_assembly_elev), disturbance_mean_interval = 39, data_param = param_slope_P)
+    command: run_assembly_list(I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ), I(FUN = run_assembly_elev), disturbance_mean_interval = 40)
     check: exists
     cleanup_level: purge
 
   list_assembly_lma_single_slope:
-    command: run_assembly_list(I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ), I(FUN = run_assembly_slope), disturbance_mean_interval = 5, data_param = param_slope_TP)
+    command: run_assembly_list(I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ), I(FUN = run_assembly_slope), disturbance_mean_interval = 5)
     check: exists
     cleanup_level: purge
 
   list_assembly_lma_multi_slope:
-    command: run_assembly_list(I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ), I(FUN = run_assembly_slope), disturbance_mean_interval = 40, data_param = param_slope_TP)
+    command: run_assembly_list(I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ), I(FUN = run_assembly_slope), disturbance_mean_interval = 40)
     check: exists
     cleanup_level: purge
 
@@ -428,10 +427,6 @@ targets:
     command: figure_lma_tradeoff_climate(leaf_traits, I(var_clim = 'map'))
     plot: tall
 
-  figures/data_lma_ll_trade_off_climate_elev_T.pdf:
-    command: figure_lma_tradeoff_climate(leaf_traits, I(var_clim = 'mat'))
-    plot: tall
-
   figures/data_lma_ll_trade_off_climate_slope_elev.pdf:
     command: figure_lma_tradeoff_climate_slope_elev(leaf_traits)
     plot: tall
@@ -444,10 +439,10 @@ targets:
     command: figure_lma_climate(leaf_traits)
     plot: wide
 
-  param_slope_P:
+  output/data_slope_P.csv:
     command: param_B_kl_climate_P(leaf_traits)
 
-  param_slope_TP:
+  output/data_slope_TP.csv:
     command: param_B_kl_climate_TP(leaf_traits)
 
   leaf_traits:
