--- a/remake.yml
+++ b/remake.yml
@@ -456,8 +456,41 @@ targets:
     command: download_aridity_index()
     packages: raster
 
+  data_vpd_t:  
+    command: vpd_tavg_corr()
+    depends:
+    - download/wc2.0_2.5m_vapr_01.tif
+    - download/wc2.0_2.5m_tmin_01.tif
+    - download/wc2.0_2.5m_tmax_01.tif
+    - download/wc2.0_2.5m_tavg_01.tif
+
+  mean_vpd_t_cor:
+    command: mean_vpd_t_cor(data_vpd_t) 
+
+  download/wc2.0_2.5m_vapr_01.tif:
+    command: fun_unzip("download/wc2.0_2.5m_vapr.zip")
+
+  download/wc2.0_2.5m_tmin_01.tif:
+    command: fun_unzip("download/wc2.0_2.5m_tmin.zip")
+
+  download/wc2.0_2.5m_tmax_01.tif:
+    command: fun_unzip("download/wc2.0_2.5m_tmax.zip")
+
+  download/wc2.0_2.5m_tavg_01.tif:
+    command: fun_unzip("download/wc2.0_2.5m_tavg.zip")
 
   download/wright-2004.xls:
     download: "http://www.nature.com/nature/journal/v428/n6985/extref/nature02403-s2.xls"
 
+  download/wc2.0_2.5m_vapr.zip:
+    download: "http://biogeo.ucdavis.edu/data/worldclim/v2.0/tif/base/wc2.0_2.5m_vapr.zip"
+
+  download/wc2.0_2.5m_tmin.zip:
+    download: "http://biogeo.ucdavis.edu/data/worldclim/v2.0/tif/base/wc2.0_2.5m_tmin.zip"
+
+  download/wc2.0_2.5m_tmax.zip:
+    download: "http://biogeo.ucdavis.edu/data/worldclim/v2.0/tif/base/wc2.0_2.5m_tmax.zip"
+
+  download/wc2.0_2.5m_tavg.zip:
+    download: "http://biogeo.ucdavis.edu/data/worldclim/v2.0/tif/base/wc2.0_2.5m_tavg.zip"
 
